# advent-of-code

./: README.md
2016/1/: 1  main.cpp  main.cpp.working  sample1.txt
2016/2/: 2  main.cpp  part1.cpp
2016/3/: 3  main.cpp
2018/1/: input.txt  main.cpp
2018/10/: main.cpp
2018/11/: main.cpp
2018/12/: main.cpp
2018/13/: input.txt  main.cpp
2018/14/: main.cpp
2018/16/: main.cpp  main1.cpp
2018/17/: main.cpp  rhioutput.txt  short.txt
2018/18/: main.cpp
2018/19/: input_annotated.txt  (+3 more)
2019/: Cargo.toml
2019/aoc-01/: Cargo.toml
2019/aoc-01/src/: main.rs
2019/aoc-02/: Cargo.toml
2019/aoc-02/src/: main.rs
2019/aoc-03/: Cargo.toml
2019/aoc-03/src/: main.rs
2019/aoc-04/: Cargo.toml  test.txt
2019/aoc-04/src/: main.rs
2019/aoc-05/: Cargo.toml
2019/aoc-05/src/: main.rs
2019/aoc-06/: Cargo.toml
2019/aoc-06/src/: main.rs
2019/aoc-07/: Cargo.toml
2019/aoc-07/src/: main.rs
2019/aoc-08/: Cargo.toml
2019/aoc-08/src/: main.rs
2019/aoc-09/: Cargo.toml
2019/aoc-09/src/: main.rs
2019/aoc-10/: Cargo.toml
2019/aoc-11/: Cargo.toml
2019/aoc-11/src/: main.rs
2019/aoc-12/: Cargo.toml
2019/aoc-13/: Cargo.toml
2019/aoc-14/: Cargo.toml
2019/aoc-15/: Cargo.toml
2019/aoc-15/src/: main.rs
2019/aoc-16/: Cargo.toml
2019/aoc-17/: Cargo.toml
2019/aoc-18/: Cargo.toml
2019/aoc-19/: Cargo.toml
2019/aoc-19/src/: main.rs
2019/intcode/: Cargo.toml
2019/intcode/src/: lib.rs
2019/lib/intcode/src/: lib.rs
2020/: .gitignore  Cargo.toml
2021/: Cargo.toml
2023/: Cargo.toml  pyproject.toml
2025/: .gitignore  Cargo.toml
(+51 files in other folders)
