[package]
name = "aoc-01"
version = "0.1.0"
authors = ["Ben Falconer <ben@falconers.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
intcode = { path="lib/intcode" }
petgraph = "0.4.13"
regex = "1"
num = "0.2"
