[package]
name = "aoc-01"
version = "0.1.0"
authors = ["Ben Falconer <ben@falconers.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
petgraph = "0.4.13"
regex = "1"
num = "0.2"
modinverse = "0.1.1"
scan_fmt = "0.2.5"
rand = "0.7.3"
bit-vec = "0.6"
hex = "0.4"
nom = "7.1.0"
text_io = "0.1.12"
eval = "0.4.3"
memoize = "0.3.3"

[profile.release]
overflow-checks = true
