[package]
name = "aoc-01"
version = "0.1.0"
authors = ["Ben Falconer <ben@falconers.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
regex = "1"
rand = "0.7.3"
hex = "0.4"
memoize = "0.3.3"
rust-analyzer = "0.0.1"

[profile.release]
overflow-checks = true
